Use LinkedList over ArrayList.